--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body {
-    background: red;
+    background: #f1f1f1;
+}
+
+img {
+    width: 300px;
+}
+
+a   {
+    color: red;
+    text-decoration: none;
+    padding: 0 20px 0 0;
 }
