--- a/class-work/class05/horizontal-nav/css/style.css
+++ b/class-work/class05/horizontal-nav/css/style.css
@@ -2,3 +2,22 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 20px;
 }
+
+
+
+a {
+	display: inline-block;
+	padding: 25px;
+	color: #f1f1f1;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+a:hover {
+	background: orange;
+	color: white;
+}
+
+nav {
+	background-color: black;
+}
