--- a/class-work/class06/startup-matchmaker/css/styles.css
+++ b/class-work/class06/startup-matchmaker/css/styles.css
@@ -6,8 +6,9 @@ font-family: 'Source Sans Pro', sans-serif; */
 /* BASICS */
 
 body {
-    width: 1280px;
+    max-width: 1280px;
     margin: 0 auto;
+    background: black;
 }
 
 header {
@@ -16,23 +17,35 @@ header {
     justify-content: space-between;
 }
 
+.nav-links {
+    font-family: "Source Sans Pro";
+    color: white;
+    font-size: 18px;
+    text-decoration: none;
+    padding-left: 15px;
+}
+
 h1 {
     color: yellow;
     font-family: 'Merriweather', serif;
+    margin: 13px 0 13px 0;
 }
 
 h2 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
     font-size: 25px;
 }
 
 h3 {
     font-family: 'Merriweather', serif;
+    font-size: 24px;
     
 }
 
 p {
     font-family: 'Source Sans Pro', sans-serif;
+    font-size: 18px;
 }
 
 /* HEADER */
@@ -44,8 +57,12 @@ p {
     background-color: #C6C6C6;
     font-style: italic;
     text-align: center;
-    padding: 15px;
-    font-size: 22px;    
+    padding: 20px;
+    margin: 0;
+    font-size: 24px;
+    border-top-style: solid;
+    border-top-width: 3px;
+    border-top-color: yellow; 
 }
 
 .crossed-out {
@@ -62,15 +79,56 @@ p {
 
 .cover-photo-box {
     background-image: url("../img/coworking.jpg");
-    height: 750px;
+    height: 340px;
+    padding: 30px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .white-box {
     padding: 30px;
-    width: 400px;
-    background: rgba(255, 255, 255, 0.5);
+    width: 350px;
+    background: rgba(255, 255, 255, 0.70);
+    align-self: flex-start;
 }
 
 /* ONBOADING */
 
+.discover-box {
+    background: white;
+    padding: 10px 20px 30px 20px;  
+    display: flex;
+}
+
+.discover-cards {
+    padding: 15px;
+}
+
+.btn {
+    font-family: "Oswald";
+    text-decoration: none;
+    background: #d8d8d8;
+    color: black;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 20px 10px 20px;
+    text-align: center;
+    width: 100%-40px;
+    display: block;
+    border-bottom: solid 2px #404040;
+    border-radius: 6px;
+}
+
+.btn-cta {
+background: yellow;
+}
+
 /* FOOTER */
+
+footer {
+    color: white;
+    padding: 20px;
+    font-family: "Source Sans Pro";
+    font-size: 18px;
+}
