--- a/class-work/class15/super-school-news/style.css
+++ b/class-work/class15/super-school-news/style.css
@@ -1,5 +1,5 @@
 .container {
-  width: 960px;
+  width: 85%;
   margin: 0 auto;
 }
 
@@ -27,13 +27,17 @@ header nav a {
 
 section {
   background-color: black;
+  padding: 10px;
+  box-sizing: border-box;
+  display: flex;
 }
 
 article {
   background-color: white;
   /* we will talk about flex-shrink and flex-grow next! */
-  flex-shrink: 0;
-  flex-grow: 0;
+  flex-shrink: 1;
+  flex-grow: 1;
+  padding: 10px;
 }
 
 /* targets the 1st article; nth-child(2) would target the 2nd article*/
@@ -45,4 +49,14 @@ article h1 {
   font-size: 20px;
   text-align: center;
   padding: 5px 0;
+}
+
+@media (max-width: 768px){
+  section, header {
+    display: block;
+  }
+  article:nth-child(1) {
+    margin-right: 0;
+    border-bottom: 5px solid black;
+  }
 }
