--- a/class-work/class16/animated-sticky-nav/css/style.css
+++ b/class-work/class16/animated-sticky-nav/css/style.css
@@ -1,9 +1,17 @@
 .wrapper {
 	text-align: center;
+	padding-top: 75px;
 }
 
 header {
 	background: SeaGreen;
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	font-size: 75px;
+	transition: all 0.3s ease-in-out;
+	/* bottom: 0; */
 }
 
 img {
