--- a/class-work/class16/responsive-navbar/css/style.css
+++ b/class-work/class16/responsive-navbar/css/style.css
@@ -29,6 +29,27 @@ header nav a {
 	margin-left: 50px;
 }
 
+#mobile-nav {
+	background: grey;
+	display: none;
+}
+
+#mobile-nav a {
+	display: block;
+	text-align: center;
+}
+
 #burger {
 	float: right;
+	display: none;
+}
+
+@media (max-width: 875px) {
+	#burger {
+		display: block;
+	}
+	
+	#large-nav {
+		display: none;
+	}
 }
