--- a/final-project/css/style.css
+++ b/final-project/css/style.css
@@ -4,14 +4,14 @@
 
 body {
   width: 960px;
+  height: 634px;
   margin: 0 auto;
-  padding: 50px 0 50px 0;
+  padding: 20px 0 0 0;
 }
 
 /* Section 1 */
 
 #titles {
-  padding-bottom: 30px;
 }
 
 #titles span:nth-child(2) {
@@ -58,7 +58,9 @@ body {
 /* Section 2 */
 
 #diagram {
-  height: 447px;
+  height: 377px;
+  width: 882px;
+  margin: 65px auto;
   position: relative;
 }
 
@@ -69,32 +71,45 @@ body {
 
 #users-moderator {
   position: absolute;
-  left: 5px;
-  top: 133px;
+  left: 0;
+  top: 124px;
 }
 
 #users-participants {
   position: absolute;
-  left: 700px;
-  top: 134px;
+  left: 662px;
+  top: 82px;
 }
 
 #diagram-old {
 }
 
 #source-qual {
+  position: absolute;
+  left: 255px;
+  top: 82px;
+/*   Temporarily Hidden */
+  /* display: none; */
 }
 
 #source-quant {
+  position: absolute;
+  left: 599px;
+  top: 169px;
+/*   Temporarily Hidden */
+  /* display: none; */
 }
 
 #feedback-qual {
+  position: absolute;
+  left: 210px;
+  top: 82px;
 }
 
 #feedback-quant {
   position: absolute;
-  left: 506px;
-  top: 78px;
+  left: 465px;
+  top: 17px;
 }
 
 #diagram-new {
@@ -102,18 +117,19 @@ body {
 
 #source-remesh {
   position: absolute;
-  left: 215px;
-  top: 10
-    px;
+  left: 120px;
+  top: 0;
 }
 
-feedback-realtime {
+#feedback-realtime {
+  position: absolute;
+  left: 210px;
+  top: 242px;
 }
 
 /* Section 3 */
 
 #attributes {
-  padding-top: 30px;
   position: relative;
   font-family: Lato-Light;
   font-size: 20px;
@@ -135,7 +151,7 @@ feedback-realtime {
 #attributes-left {
   width: 410px;
   position: absolute;
-  left: 0px;
+  left: 50px;
 }
 
 #deep {
@@ -147,7 +163,7 @@ feedback-realtime {
 #attributes-right {
   width: 410px;
   position: absolute;
-  left: 550px;
+  left: 500px;
 }
 
 #no-deep {
@@ -158,6 +174,6 @@ feedback-realtime {
 
 /* Animation */
 
-.top {
+.z-top {
   z-index: 1;
 }
