--- a/final-project/css/style.css
+++ b/final-project/css/style.css
@@ -3,15 +3,42 @@
 /* Layout */
 
 body {
-  width: 960px;
+  max-width: 960px;
   height: 634px;
   margin: 0 auto;
+}
+
+h1 {
+  font-family: "Lato-Bold";
+  font-size: 60px;
+  line-height: 70px;
+  margin: 30px 0 10px 0;
+}
+
+h4 {
+  font-family: "Lato-Light";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 0 0 30px 0;
+}
+
+.bookended-content-example {
+  height: 1000px;
+}
+
+#animation-wrapper {
+/*   overflow: hidden; */
+  width: 100%;
   padding: 20px 0 0 0;
+  transform-origin: 0% 0%;
+  );
 }
 
 /* Section 1 */
 
 #titles {
+  position: relative;
 }
 
 #titles span:nth-child(2) {
@@ -20,7 +47,7 @@ body {
 
 .title-bars {
     color: #1790CE;
-    background: #DBF3FF;
+    background: rgba(219,243,255, 1);
     border: solid 1px rgba(23,144,206,0.5);
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -39,17 +66,23 @@ body {
 
 #titles-old {
   display: flex;
+  position: absolute;
+  opacity: 0;
 }
 
 #focus-groups {
-  flex: 1;
+  width: 450px;
 }
 
 #surveys {
-  flex: 1;
+  width: 450px;
 }
 
 #titles-new {
+  opacity: 0;
+  position: absolute;
+  width: 960px;
+/*   display: none; */
 }
 
 #remesh {
@@ -60,24 +93,25 @@ body {
 #diagram {
   height: 377px;
   width: 882px;
-  margin: 65px auto;
+  margin: 80px auto 20px auto;
   position: relative;
 }
 
 /* Section 2 - Contents*/
 
 #diagram-users {
+  opacity: 0;
 }
 
 #users-moderator {
   position: absolute;
-  left: 0;
+  left: 100px;
   top: 124px;
 }
 
 #users-participants {
   position: absolute;
-  left: 662px;
+  left: 562px;
   top: 82px;
 }
 
@@ -88,28 +122,28 @@ body {
   position: absolute;
   left: 255px;
   top: 82px;
-/*   Temporarily Hidden */
-  /* display: none; */
+  opacity: 0;
 }
 
 #source-quant {
   position: absolute;
   left: 599px;
   top: 169px;
-/*   Temporarily Hidden */
-  /* display: none; */
+  opacity: 0;
 }
 
 #feedback-qual {
   position: absolute;
-  left: 210px;
+  left: 112px;
   top: 82px;
+  opacity: 0;
 }
 
 #feedback-quant {
   position: absolute;
-  left: 465px;
-  top: 17px;
+  left: 477px;
+  top: 169px;
+  opacity: 0;
 }
 
 #diagram-new {
@@ -119,12 +153,14 @@ body {
   position: absolute;
   left: 120px;
   top: 0;
+  opacity: 0;
 }
 
 #feedback-realtime {
   position: absolute;
   left: 210px;
-  top: 242px;
+  top: 262px;
+  opacity: 0;
 }
 
 /* Section 3 */
@@ -136,6 +172,7 @@ body {
   color: #1A1A1A;
   letter-spacing: 0;
   line-height: 30px;
+  opacity: 0;
 }
 
 .icon-spacing {
@@ -144,6 +181,8 @@ body {
 
 .attribute-rows {
   padding-bottom: 20px;
+  display: flex;
+  align-items: center;
 }
 
 /* Section 3 - Contents */
@@ -154,6 +193,7 @@ body {
   left: 50px;
 }
 
+
 #deep {
 }
 
@@ -163,7 +203,7 @@ body {
 #attributes-right {
   width: 410px;
   position: absolute;
-  left: 500px;
+  left: 550px;
 }
 
 #no-deep {
@@ -176,4 +216,8 @@ body {
 
 .z-top {
   z-index: 1;
+}
+
+#diagram.fade-in {
+    opacity: 1;
 }
