--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ a {
 .header {
     background: rgba(255, 255, 255, 0.92);
     backdrop-filter: blur(24px);
+    -webkit-backdrop-filter: blur(24px);
     border: 1px solid #E6E6E6;
     display: flex;
     height: 56px;
@@ -258,6 +259,7 @@ a {
     border-radius: 6px;
     box-shadow: inset 0px 0px 0px 1.3px #ffffff;
     width: 100%;
+    height: auto;
 }
 .thumbnails-img:hover {
     box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
@@ -270,6 +272,7 @@ a {
     border-radius: 6px;
     box-shadow: inset 0px 0px 0px 1.3px #ffffff;
     width: 100%;
+    height: auto;
 }
 .thumbnails-concept:hover {
     box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
@@ -283,6 +286,7 @@ a {
     box-shadow: inset 0px 0px 0px 1.3px #ffffff;
     margin-top: 24px;
     width: 100%;
+    height: auto;
 }
 .thumbnails-remesht:hover {
     box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
