--- a/style.css
+++ b/style.css
@@ -291,9 +291,9 @@ a {
 .thumbnails-remesh {
     border-radius: 6px;
     box-shadow: inset 0px 0px 0px 1.3px #ffffff;
-    margin-top: 24px;
+    /* margin-top: 24px; */
     width: 100%;
-    height: calc(100% -  24px);
+    /* height: calc(100% -  24px); */
 }
 .thumbnails-remesht:hover {
     box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
