--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ a {
     margin-bottom: 24px;
 }
 
+.about-text {
+    font-size: 24px;
+    line-height: 40px;
+}
+
 /* S P A C E R S */
 .top-128 {
     margin-top: 128px;
@@ -264,12 +269,12 @@ a {
 }
 .thumbnails-img {
     border-radius: 6px;
-    box-shadow: inset 0px 0px 0px 1.3px #ffffff;
+    box-shadow: 0px 0px 0px 1.3px #ffffff;
     width: 100%;
     height: 100%;
 }
 .thumbnails-img:hover {
-    box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 0px 0px 1.3px #ffffff, 0px 2px 5px rgba(0, 0, 0, 0.12);
 }
 .img-link {
     /* flex: 1 0 242px; */
