--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ a {
     flex-wrap: wrap;
     margin: 0 auto;
     max-width: 648px;
-    padding: 120px 16px 64px 16px;
+    padding: 120px 16px 112px 16px;
 }
 
 .content-container {
@@ -189,6 +189,9 @@ a {
     border-radius: 6px 6px 0 0;
     height: 144px;
     width: 100%;
+}
+.prototype-casestudy {
+    height: 360px;
 }
 
 /* F A N C Y B O X */
@@ -282,12 +285,12 @@ a {
 }
 .thumbnails-concept {
     border-radius: 6px;
-    box-shadow: inset 0px 0px 0px 1.3px #ffffff;
+    box-shadow: 0px 0px 0px 1.3px #ffffff;
     width: 100%;
     height: 100%;
 }
 .thumbnails-concept:hover {
-    box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 .concept-link {
     /* flex: 1 0 242px; */
@@ -295,11 +298,11 @@ a {
 }
 .thumbnails-remesh {
     border-radius: 6px;
-    box-shadow: inset 0px 0px 0px 1.3px #ffffff;
+    box-shadow: 0px 0px 0px 1.3px #ffffff;
     width: 100%;
 }
 .thumbnails-remesht:hover {
-    box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 .remesh-link {
     /* flex: 1 0 242px; */
@@ -409,6 +412,21 @@ a {
     }
     .card-prototype-columnns {
         width: 100%;
+    }
+    .prototype-cover {
+        height: 216px;
+    }
+    .prototype-casestudy {
+        height: 216px;
+    }
+    .thumbnails-remesh {
+        border-radius: 2px;
+    }
+    .thumbnails-concept {
+        border-radius: 2px;
+    }
+    .thumbnails-img {
+        border-radius: 2px;
     }
     .contact {
         flex: 0 0 200px;
