--- a/style.css
+++ b/style.css
@@ -151,6 +151,18 @@ a {
     padding: 0 16px;
 }
 
+.project-preview {
+    background-color: rgba(255, 255, 255, 0.92);
+    border-radius: 6px;
+    box-shadow: inset 0px 0px 0px 1px #e6e6e6;
+    padding: 8px;
+    width: 100%;
+}
+.project-preview:hover {
+    background-color: rgba(255, 255, 255, 0.92);
+    box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12);
+}
+
 .card-note {
     background-color: #ffffff;
     border-radius: 6px;
@@ -212,7 +224,8 @@ a {
     margin-right: 24px;
 }
 .ruler-badge {
-    background-color: #c4c4c4;
+    background: #F6F6F6;
+    box-shadow: inset 0px 0px 0px 1px #e6e6e6;
     border-radius: 20px;
     height: 40px;
     width: 40px;
@@ -367,6 +380,9 @@ a {
 .icon-twitter {
     background-image: url(images/icons-twitter.svg);
 }
+.icon-instagram {
+    background-image: url(images/icons-instagram.svg);
+}
 .icon-document {
     background-image: url(images/icons-document.svg);
 }
@@ -431,7 +447,7 @@ a {
     .contact {
         flex: 0 0 200px;
         flex-wrap: wrap;
-        height: 136px;
+        height: 184px;
         align-content: space-between;
         margin: 40px auto 0 auto;
     }
