--- a/style.css
+++ b/style.css
@@ -152,13 +152,16 @@ a {
 }
 
 .project-preview {
+    align-items: flex-start;
     background-color: rgba(255, 255, 255, 0.92);
     border-radius: 6px;
     box-shadow: inset 0px 0px 0px 1px #e6e6e6;
+    display: flex;
     padding: 8px;
     width: 100%;
 }
 .project-preview:hover {
+    align-items: flex-start;
     background-color: rgba(255, 255, 255, 0.92);
     box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12);
 }
