--- a/style.css
+++ b/style.css
@@ -154,7 +154,8 @@ a {
 .project-preview {
     align-items: flex-start;
     /* background-color: rgba(255, 255, 255, 0.92); */
-    border-radius: 2px;
+    background-color: #ffffff;
+    border-radius: 6px;
     box-shadow: inset 0px 0px 0px 1px #e6e6e6;
     display: flex;
     padding: 8px;
@@ -420,7 +421,8 @@ a {
     border: 1px solid #E6E6E6;
     border-radius: 144px;
     margin: 0 auto;
-    max-width: 216px;
+    /* max-width: 216px; */
+    max-width: 104px;
 }
   
 /* M O B I L E */
