--- a/style.css
+++ b/style.css
@@ -81,6 +81,11 @@ a {
     flex-basis: 100%;
     height: 0;
   }
+
+  .spacer {
+    margin-top: 128px;
+  }
+
   
 /* H E A D E R  &  N A V I G A T I O N */
 
@@ -197,6 +202,19 @@ a {
 }
 .card-note > .primary-btn:hover .icon {
     filter: invert(100%) sepia(0%) saturate(4219%) hue-rotate(81deg) brightness(110%) contrast(87%);
+}
+.card-note:hover > .dot {
+    color: rgb(17, 186, 17);
+}
+
+.dot {
+    color: #057AFF;
+    font-size: 20px; 
+    line-height: 20px; 
+    text-align: center; 
+    width: 100%;
+    transition: 1s;
+    transition-timing-function: ease-out;
 }
 
 .card-prototype-container {
@@ -442,7 +460,8 @@ a {
     border-radius: 144px;
     margin: 0 auto;
     /* max-width: 216px; */
-    max-width: 104px;
+    max-width: 160px;
+    /* max-width: 104px; */
 }
   
 /* M O B I L E */
@@ -497,4 +516,7 @@ a {
     .primary-btn {
         width: 100%;
     }
+    .spacer {
+        margin-top: 64px;
+      }
 }/* E N D   M O B I L E */
