--- a/style.css
+++ b/style.css
@@ -169,9 +169,9 @@ a {
 
 .project-preview {
     align-items: flex-start;
-    background: rgba(255, 255, 255, 0.80);
+    background: #1e1e1e;
     border-radius: 6px;
-    box-shadow: inset 0px 0px 0px 1px #e6e6e6;
+    box-shadow: inset 0px 0px 0px 1px #000000;
     display: flex;
     padding: 8px;
     width: 100%;
@@ -181,7 +181,7 @@ a {
 }
 .project-preview:hover {
     align-items: flex-start;
-    background-color: #ffffff;
+    background-color: #000000;
     /* box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12); */
     box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12);
     padding: 8px;
