--- a/style.css
+++ b/style.css
@@ -169,9 +169,9 @@ a {
 
 .project-preview {
     align-items: flex-start;
-    background: #1e1e1e;
+    background: #F6F6F6;
+    box-shadow: inset 0px 0px 0px 1px #e6e6e6;
     border-radius: 6px;
-    box-shadow: inset 0px 0px 0px 1px #000000;
     display: flex;
     padding: 8px;
     width: 100%;
@@ -181,7 +181,7 @@ a {
 }
 .project-preview:hover {
     align-items: flex-start;
-    background-color: #000000;
+    background: #F6F6F6;
     /* box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12); */
     box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12);
     padding: 8px;
@@ -300,7 +300,7 @@ a {
     color: #404040;
     font-size: 12px;
     font-weight: bold;
-    letter-spacing: .05em;
+    letter-spacing: .03em;
     text-align: end;
 }
 .work-hero {
