--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ a {
 }
 .project-preview:hover {
     align-items: flex-start;
-    background: #FFFFFF;
+    /* background: #FFFFFF; */
     /* box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12); */
     box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12);
     padding: 6px;
@@ -210,15 +210,21 @@ a {
 .card-note:active {
     box-shadow: inset 0px 0px 0px 1px #e6e6e6;
 }
-.card-note > .primary-btn:hover {
+.card-note > .primary-btn {
     background: #057AFF;
     box-shadow: inset 0px 0px 0px 0px #057AFF;
     color: #ffffff;
 }
+.card-note > .primary-btn:hover {
+    background: #026ae1;
+    color: #ffffff;
+}
 .card-note:active > .primary-btn {
     background: #057AFF;
-    box-shadow: inset 0px 0px 0px 0px #057AFF;
     color: #ffffff;
+}
+.card-note > .primary-btn .icon {
+    filter: invert(100%) sepia(0%) saturate(4219%) hue-rotate(81deg) brightness(110%) contrast(87%);
 }
 .card-note > .primary-btn:hover .icon {
     filter: invert(100%) sepia(0%) saturate(4219%) hue-rotate(81deg) brightness(110%) contrast(87%);
@@ -463,6 +469,9 @@ a {
 .icon-view {
     background-image: url(images/icons-view.svg);
 }
+.icon-information {
+    background-image: url(images/icons-information.svg);
+}
 
 .icon {
     background-size: cover;
@@ -490,6 +499,9 @@ a {
 .primary-btn:hover .icon-email {
     /* filter: none; */
 }
+.primary-btn:hover .icon-blue {
+    filter: invert(34%) sepia(95%) saturate(3284%) hue-rotate(202deg) brightness(103%) contrast(104%);
+}
 
 
 /* I M A G E S */
@@ -501,6 +513,39 @@ a {
     /* max-width: 216px; */
     max-width: 160px;
     /* max-width: 104px; */
+}
+
+/* A D D - O N S */
+
+.system-note {
+    background-color: #f6f6f6;
+    border: 1px solid #E6E6E6;
+    border-radius: 2px;
+    color: #606060;
+    cursor: default;
+    display: flex;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 16px;
+    padding: 12px 16px;
+}
+
+.secondary-link {
+    color: #606060;
+    font-size: 10px;
+    letter-spacing: 0px;
+    line-height: 16px;
+}
+
+.secondary-link:hover {
+    color: #000000;
+    /* color: #222222; */
+    /* color: #404040; */
+    /* color: #057AFF; */
+}
+
+.text-hover-blue:hover {
+    color: #057AFF;
 }
   
 /* M O B I L E */
