--- a/style.css
+++ b/style.css
@@ -278,6 +278,9 @@ a {
 
 .fancybox-slide--iframe .fancybox-content {
     background: none !important;
+    height: fit-content !important;
+    max-height: 100%;
+    aspect-ratio: 16/9;
 }
 
 /* T I M E L I N E */
