--- a/style.css
+++ b/style.css
@@ -266,6 +266,22 @@ a {
     height: 144px;
     width: 100%;
 }
+
+.prototype-cover_overlay {
+    background-color: #004ba0e0;
+    height: 100%;
+    border-radius: 6px 6px 0 0;
+    box-shadow: inset 0px 0px 0px 1px #00000012;
+}
+
+.prototype-cover_overlay-text {
+    padding: 40px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 64px;
+}
+
 .prototype-casestudy {
     height: 360px;
 }
@@ -580,6 +596,13 @@ a {
     .prototype-cover {
         height: 216px;
     }
+
+    .prototype-cover_overlay-text {
+        padding: 32px;
+        font-size: 40px;
+        line-height: 56px;
+    }
+
     .prototype-casestudy {
         height: 216px;
     }
